[gd_scene load_steps=3 format=2]

[ext_resource path="res://Script/Scene/OdeToJoy/OdeToJoy.gd" type="Script" id=1]
[ext_resource path="res://Picture/Scene/OdeToJoy/OdeToJoy5_2.png" type="Texture" id=3]

[node name="OdeToJoy3" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="control1" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="colorRectA" type="ColorRect" parent="control1"]
margin_left = 45.0
margin_top = 45.0
margin_right = 65.0
margin_bottom = 385.0
rect_pivot_offset = Vector2( -1270.49, -604.481 )
__meta__ = {
"_edit_lock_": true
}

[node name="colorRect1" type="ColorRect" parent="control1"]
margin_top = 45.0
margin_right = 1280.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( -1270.49, -604.481 )
__meta__ = {
"_edit_lock_": true
}

[node name="colorRect2" type="ColorRect" parent="control1"]
margin_top = 125.0
margin_right = 1280.0
margin_bottom = 145.0
rect_pivot_offset = Vector2( -1270.49, -604.481 )
__meta__ = {
"_edit_lock_": true
}

[node name="colorRect3" type="ColorRect" parent="control1"]
margin_top = 205.0
margin_right = 1280.0
margin_bottom = 225.0
rect_pivot_offset = Vector2( -1270.49, -604.481 )
__meta__ = {
"_edit_lock_": true
}

[node name="colorRect4" type="ColorRect" parent="control1"]
margin_top = 285.0
margin_right = 1280.0
margin_bottom = 305.0
rect_pivot_offset = Vector2( -1270.49, -604.481 )
__meta__ = {
"_edit_lock_": true
}

[node name="colorRect5" type="ColorRect" parent="control1"]
margin_top = 365.0
margin_right = 1280.0
margin_bottom = 385.0
rect_pivot_offset = Vector2( -1270.49, -604.481 )
__meta__ = {
"_edit_lock_": true
}

[node name="colorRect6" type="ColorRect" parent="control1"]
margin_left = 159.0
margin_top = 445.0
margin_right = 348.0
margin_bottom = 465.0
__meta__ = {
"_edit_lock_": true
}

[node name="colorRect7" type="ColorRect" parent="control1"]
margin_left = 443.0
margin_top = 445.0
margin_right = 632.0
margin_bottom = 465.0
__meta__ = {
"_edit_lock_": true
}

[node name="control4" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="colorRectV1" type="ColorRect" parent="control4"]
margin_left = 283.0
margin_top = 186.0
margin_right = 312.0
margin_bottom = 445.0
__meta__ = {
"_edit_lock_": true
}

[node name="colorRectV2" type="ColorRect" parent="control4"]
margin_left = 567.0
margin_top = 186.0
margin_right = 596.0
margin_bottom = 445.0
__meta__ = {
"_edit_lock_": true
}

[node name="colorRectV3" type="ColorRect" parent="control4"]
margin_left = 853.0
margin_top = 145.0
margin_right = 882.0
margin_bottom = 404.0
__meta__ = {
"_edit_lock_": true
}

[node name="colorRectV4" type="ColorRect" parent="control4"]
margin_left = 1138.0
margin_top = 106.0
margin_right = 1167.0
margin_bottom = 365.0
__meta__ = {
"_edit_lock_": true
}

[node name="control3" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="textureRect1" type="TextureRect" parent="control3"]
margin_left = 191.0
margin_top = 394.0
margin_right = 316.0
margin_bottom = 499.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="textureRect2" type="TextureRect" parent="control3"]
margin_left = 476.0
margin_top = 394.0
margin_right = 601.0
margin_bottom = 499.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="textureRect3" type="TextureRect" parent="control3"]
margin_left = 761.0
margin_top = 354.0
margin_right = 886.0
margin_bottom = 459.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="textureRect4" type="TextureRect" parent="control3"]
margin_left = 1046.0
margin_top = 314.0
margin_right = 1171.0
margin_bottom = 419.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}
